cyclonedx-bom/tests/spec/snapshots/1.5/it_should_parse_all_of_the_valid_xml_specifications@valid-metadata-tool-1.5.xml.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_5.rs
assertion_line: 27
expression: bom_output
input_file: cyclonedx-bom/tests/spec/1.5/valid-metadata-tool-1.5.xml
---
<?xml version="1.0" encoding="utf-8"?>
<bom xmlns="http://cyclonedx.org/schema/bom/1.5" serialNumber="urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79" version="1">
  <metadata>
    <tools>
      <tool>
        <vendor>Awesome Vendor</vendor>
        <name>Awesome Tool</name>
        <version>9.1.2</version>
        <hashes>
          <hash alg="SHA-1">25ed8e31b995bb927966616df2a42b979a2717f0</hash>
          <hash alg="SHA-256">a74f733635a19aefb1f73e5947cef59cd7440c6952ef0f03d09d974274cbd6df</hash>
        </hashes>
      </tool>
    </tools>
  </metadata>
  <components />
</bom>
