cyclonedx-bom/tests/spec/snapshots/1.5/it_should_parse_all_of_the_valid_xml_specifications@valid-properties-1.5.xml.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_5.rs
assertion_line: 27
expression: bom_output
input_file: cyclonedx-bom/tests/spec/1.5/valid-properties-1.5.xml
---
<?xml version="1.0" encoding="utf-8"?>
<bom xmlns="http://cyclonedx.org/schema/bom/1.5" serialNumber="urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79" version="1">
  <metadata>
    <properties>
      <property name="Foo">Bar</property>
      <property name="Foo">You</property>
      <property name="Foo">Two</property>
      <property name="Bar">Foo</property>
    </properties>
  </metadata>
  <components>
    <component type="library">
      <name>acme-library</name>
      <version>1.0.0</version>
      <properties>
        <property name="Foo">Bar</property>
        <property name="Bar">Foo</property>
      </properties>
    </component>
  </components>
  <services>
    <service bom-ref="b2a46a4b-8367-4bae-9820-95557cfe03a8">
      <group>org.partner</group>
      <name>Stock ticker service</name>
      <endpoints>
        <endpoint>https://partner.org/api/v1/stock</endpoint>
      </endpoints>
      <properties>
        <property name="Foo">Bar</property>
        <property name="Bar">Foo</property>
      </properties>
    </service>
  </services>
</bom>
